[package]
name = "twitter-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-cron-scheduler = "0.8.1"
tokio = {version = "1.20.1", features = ["full"]}
lightspeed_scheduler = "0.52.0"
chrono = "0.4.23"
reqwest = "0.11.13"
egg-mode = "0.16"
structopt = "0.3.26"
yansi = "0.5.1"
