[package]
name = "twitter-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.20.1", features = ["full"]}
lightspeed_scheduler = "0.52.0"
chrono = "0.4.23"
egg-mode = "0.16"
yansi = "0.5.1"
rand = "0.8.5"
cronjob = "0.4.17"
dotenv = "0.15.0"
simple-scheduler = "0.1.0"
